# llm-eval-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: .env.example  config.yaml
datasets/: functional.jsonl  multi_turn.jsonl  rag_knowledge_base.jsonl  regression.jsonl  safety.jsonl
prompts/: llm_judge_rubric.txt
src/: __main__.py
src/chatbots/: __init__.py  base.py  mock_adapter.py  openai_compatible.py  rag_chatbot.py
src/dashboard/: app.py
src/dashboard/components/: charts.py  metrics.py  shared.py  sidebar.py  styles.py
src/dashboard/pages/: 1_run.py  2_results.py  3_compare.py  4_test_cases.py
src/evaluators/: base.py  consistency.py  deepeval_evaluator.py  llm_judge.py  ragas_evaluator.py  rule_based.py  safety.py
src/reporting/: json_reporter.py  markdown_reporter.py
src/runner/: models.py  runner.py
tests/: conftest.py  test_chatbots.py  test_deepeval_evaluator.py  test_evaluators.py  test_llm_judge_evaluator.py  test_models.py  test_openai_chatbot.py  test_rag_chatbot.py  test_ragas_evaluator.py  test_reporting.py  test_runner.py  test_runner_errors.py
